welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: reassignment to val
if ((aSmile = true && bSmile = true) || (aSmile = false && bSmile = false))
            ^